[metadata]
name = cruciblehelper
version = 0.0.1
description = Helper Tool for Potion Craft Ingredients Modding using the Crucible Framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Mzz.
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    pyyaml

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
    
[options.packages.find]
where = src

